--- a/index.html
+++ b/index.html
@@ -29,6 +29,22 @@
     </div>
 </div>
 
+<div id="modal" class="modal">
+    <div class="modal-content">
+        <div class="modal-header">
+            <span class="close">&times;</span>
+            <h2>Material Name</h2>
+        </div>
+        <div class="modal-body">
+            <img src="">
+        </div>
+        <div class="modal-footer">
+            <button class="btn-download">Download</button>
+            <button class="btn-share">Share</button>
+        </div>
+    </div>
+</div>
+
 <footer>
     <Center>About us | Contact | News | Poopoopeepee</Center>
 </footer>
