Added description to modal

--- a/index.html
+++ b/index.html
@@ -37,6 +37,18 @@
         </div>
         <div class="modal-body">
             <img src="">
+            <div class="modal-half">
+                <div class="description">
+                    <p>Lorem ipsum dolor sit amet consectour</p>
+                </div>
+                <div class="info">
+                <p>License <span>CC0 1.0 Universal</span></p>
+                <p>Author <span></span></p>
+                <p>Blender version <span>0.0</span></p>
+                <p>File size <span>0.00 MB</span></p>
+                <p>Release date <span>January 1, 1970</span></p>
+                </div>
+            </div>
         </div>
         <div class="modal-footer">
             <button class="btn-download">Download</button>
@@ -48,6 +60,7 @@
 <footer>
     <Center>About us | Contact | News | Poopoopeepee</Center>
 </footer>
+<script src="materials.js"></script>
 <script src="script.js"></script>
 </body>
 </html>
