Added file downloading

--- a/index.html
+++ b/index.html
@@ -56,7 +56,7 @@
         </div>
     </div>
 </div>
-
+<a href="" download="" id="downloadLink"></a>
 <footer>
     <Center>About us | Contact | News | Poopoopeepee</Center>
 </footer>
