Added grainyplastic thumb and blendfile

--- a/index.html
+++ b/index.html
@@ -37,6 +37,15 @@
         </div>
         <div class="modal-body">
             <img src="">
+                <div class="modal-body-descript">
+                    
+                    <p>Description goes here</p>
+                    <p>Author:</p>
+                    <p>Credits:</p>
+                    <p>License:</p>
+                    <p>Version: 2.79</p>
+                </div>
+
         </div>
         <div class="modal-footer">
             <button class="btn-download">Download</button>
