--- a/index.html
+++ b/index.html
@@ -61,7 +61,7 @@
 </div>
 <a href="" download="" id="downloadLink"></a>
 <footer>
-    <Center>About us | Contact | News | Poopoopeepee</Center>
+    About us <span>|</span> Contact <span>|</span> News <span>|</span> Poopoopeepee
 </footer>
 <script src="materials.js"></script>
 <script src="script.js"></script>
