Added meta tags

--- a/index.html
+++ b/index.html
@@ -6,6 +6,18 @@
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <link href="styles.css" rel="stylesheet">
+    <meta name="description" content="Procedural - a place where you can download free procedural materials for blender">
+    <meta name="author" content="Retrax57, kalucky0">
+    <meta name="keywords" content="procedural, materials, blender, cycles, eevee, render">
+    <meta property="og:title" content="Procedural">
+    <meta property="og:type" content="object">
+    <meta property="og:url" content="https://retrax57.github.io/Procedural/">
+    <meta property="og:description" content="Procedural - a place where you can download free procedural materials for Blender">
+    <meta property="og:image" content="img/social_image.png">
+    <meta name="twitter:description" content="Procedural - a place where you can download free procedural materials for Blender">
+    <meta name="twitter:title" content="Procedural">
+    <meta name="twitter:card" content="summary_large_image">
+    <meta name="twitter:image:src" content="img/social_image.png">
     <link rel="apple-touch-icon" sizes="180x180" href="img/apple-touch-icon.png">
     <link rel="icon" type="image/png" sizes="32x32" href="img/favicon-32x32.png">
     <link rel="icon" type="image/png" sizes="16x16" href="img/favicon-16x16.png">
