--- a/index.html
+++ b/index.html
@@ -13,11 +13,11 @@
     <meta property="og:type" content="object">
     <meta property="og:url" content="https://retrax57.github.io/Procedural/">
     <meta property="og:description" content="Procedural - a place where you can download free procedural materials for Blender">
-    <meta property="og:image" content="img/social_image.png">
+    <meta property="og:image" content="https://retrax57.github.io/Procedural/img/social_image.png">
     <meta name="twitter:description" content="Procedural - a place where you can download free procedural materials for Blender">
     <meta name="twitter:title" content="Procedural">
     <meta name="twitter:card" content="summary_large_image">
-    <meta name="twitter:image:src" content="img/social_image.png">
+    <meta name="twitter:image:src" content="https://retrax57.github.io/Procedural/img/social_image.png">
     <link rel="apple-touch-icon" sizes="180x180" href="img/apple-touch-icon.png">
     <link rel="icon" type="image/png" sizes="32x32" href="img/favicon-32x32.png">
     <link rel="icon" type="image/png" sizes="16x16" href="img/favicon-16x16.png">
@@ -26,14 +26,14 @@
 <body>
 <header>
     <div class="logo">
-        <img src="img/logo.png" alt="logo" style="width:350px;">
-        <img src="img/substancelogo.png" alt="logo" style="width:50px;
+        <img src="img/logo.png" alt="Procedural Logo" style="width:350px;">
+        <img src="img/substancelogo.png" alt="Substance Logo" style="width:50px;
                                                   float:right;
     ">
-        <img src="img/quixellogo.png" alt="logo" style="width:50px;
+        <img src="img/quixellogo.png" alt="Quixel Logo" style="width:50px;
                                                float:right;
     ">
-        <img src="img/blenderlogo.png" alt="logo" style="width:50px;
+        <img src="img/blenderlogo.png" alt="Blender Logo" style="width:50px;
                                                 float:right;
     ">
     </div>
@@ -83,7 +83,7 @@
 </div>
 <a href="" download="" id="downloadLink"></a>
 <footer>
-    About us <span>|</span> Contact <span>|</span> News <span>|</span> Poopoopeepee
+    <a>About us</a> <span>|</span> <a href="https://github.com/Retrax57/Procedural">Contribute</a> <span>|</span> <a href="https://github.com/Retrax57/Procedural/issues/new">Report a bug</a>
 </footer>
 <script src="materials.js"></script>
 <script src="script.js"></script>
