--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <title>Procedural</title>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <link href="styles.css" rel="stylesheet">
+    <link href="styles.min.css" rel="stylesheet">
     <link href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.11.2/css/all.min.css" rel="stylesheet">
     <meta name="description" content="Procedural - a place where you can download free procedural materials for blender">
     <meta name="author" content="Retrax57, kalucky0">
@@ -96,8 +96,8 @@
 <footer>
     <a>About us</a> <span>|</span> <a href="https://github.com/Retrax57/Procedural">Contribute</a> <span>|</span> <a href="https://github.com/Retrax57/Procedural/issues/new">Report a bug</a>
 </footer>
-<script src="materials.js"></script>
-<script src="script.js"></script>
+<script src="materials.min.js"></script>
+<script src="script.min.js"></script>
 <script src="https://cdn.jsdelivr.net/npm/sharer.js@latest/sharer.min.js"></script>
 </body>
 </html>
